--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 	Các lỗi thường gặp ở kênh Perox:
 	<ol>
 		<li> 
-			<a href = "./short of perox 1.html"> 
+			<a href = "./shortofperox1.html"> 
 			   Perox 1 không bơm lên được buồng Perox </a> 
 		</li>
 		
@@ -56,7 +56,7 @@
 	<tr>
 		<th> Cách xử lý </th>
 		<th>  </th>
-		<th> <a href = "short of perox 1.html"> Click here  </a></th>
+		<th> <a href = "./shortofperox1.html"> Click here  </a></th>
 	</tr>
 </table>
 	
