--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,7 @@
 <body>
 	Các lỗi thường gặp ở kênh Perox:
 	<ol>
-		<li> 
-			<a href = "./shortofperox1.html"> 
-			   Perox 1 không bơm lên được buồng Perox </a> 
-		</li>
+		<li>   Perox 1 không bơm lên được buồng Perox </li>
 		
 		<li> Perox 2 không bơm lên được buồng Perox  </li>
 		<li> Perox 3 không bơm lên được buồng Perox  </li>
@@ -56,7 +53,6 @@
 	<tr>
 		<th> Cách xử lý </th>
 		<th>  </th>
-		<th> <a href = "./shortofperox1.html"> Click here  </a></th>
 	</tr>
 </table>
 	
