--- a/templates/index.html
+++ b/templates/index.html
@@ -29,9 +29,9 @@
 	</tr>
 	<tr>
 		<th> Run Screen </th>
-		<th> <img src ="./images/rs_normal.png"
+		<th> <img src ="images/rs_normal.png"
 				  style = "width: 240px; height: 180px; margin-left: 0.00px; margin-top: 0.00px"/> </th>
-		<th> <img src ="./images/rs_shortofperox1.png" 
+		<th> <img src ="images/rs_shortofperox1.png" 
 				  style = "width: 240px; height: 180px; margin-left: 0.00px; margin-top: 0.00px"/> </th>
 		
 	</tr>
