--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
 	</tr>
 	<tr>
 		<th> Cách xử lý </th>
-		<th> <a href = "shortofperox1.html"> Click here  </a></th>
+		<th> <a href = "shortofperox1"> Click here  </a></th>
 	</tr>
 </table>
 	
