--- a/templates/shortofperox1.html
+++ b/templates/shortofperox1.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Short of Perox 1</title>
 </head>
 
 <body>
+  test
+  <a href="https://imgur.com/h1bbHeT"><img src="https://i.imgur.com/h1bbHeT.png" title="source: imgur.com" /></a>
+  test
 </body>
 </html>
